# slurm_mcp

./: .env.example  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
slurm_mcp/: __init__.py  calculator.py  prometheus_utils.py  s_mcp.py  s_mcp_test.py  server.py  slurm_commands.py  slurm_model.py  ssh_client.py
tests/: __init__.py  test_server.py  test_slurm_commands.py  test_ssh_client.py
