[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm_mcp"
version = "0.1.0"
description = "Simple MCP server to interact with SLURM clusters"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Fabrice Normandin", email = "normandf@mila.ca"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=0.1.0",
    "paramiko>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
slurm-mcp = "slurm_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["slurm_mcp*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "ICN", "PIE", "PYI", "RSE", "RET", "SIM", "TID", "ARG", "PL", "R", "FLY"]
ignore = ["S101", "S105", "S106", "S603", "S607", "PLR2004", "PLW0603", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "PLR2004", "PLC0415"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true