[project]
name = "slurm-mcp"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.3",
    "numpy>=2.3.3",
    "pydantic>=2.11.9",
    "rich>=14.1.0",
    "sarc",
]

[project.scripts]
slurm_mcp = "slurm_mcp.__main__:main"
calculator = "slurm_mcp.calculator:main"

[tool.ruff]
line-length = 99


[tool.uv.sources]
sarc = { git = "https://www.github.com/mila-iqia/SARC" }


[tool.uv.build-backend]
# module-name = "FOO"
module-root = ""

[build-system]
requires = ["uv_build>=0.8.21,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]
