[project]
name = "slurm-mcp"
description = "Simple MCP server to interact with SLURM clusters in natural language through LLM agents."
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version"]
authors = [{ name = "Fabrice Normandin", email = "normandf@mila.quebec" }]
dependencies = [
    "fastmcp>=2.12.3",
    "numpy>=2.3.3",
    "pydantic>=2.11.9",
    "rich>=14.1.0",
    "sarc",
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]

[project.scripts]
slurm_mcp = "slurm_mcp.__main__:main"
calculator = "slurm_mcp.calculator:main"

[tool.ruff]
line-length = 99


[tool.uv.sources]
sarc = { git = "https://www.github.com/mila-iqia/SARC" }


[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[dependency-groups]
dev = ["pre-commit>=4.3.0", "pytest>=8.4.2"]
